Audio and packaging improvements (WIP) - Swapped out fonts for local files - Added exit and boot fullscreen commands for packaged - Cleaned up all audio to use AudioSprites properly - Not yet using audiosprites WIP

--- a/package.json
+++ b/package.json
@@ -6,17 +6,7 @@
   "main": "index.html",
   "repository": "UWStout/edge-of-the-map",
   "scripts": {
-    "sfx": "audiosprite --loop running --output assets/audio/sounds assets/audio/*.wav",
-    "recode": "run-s recode1 recode2 recode3 recode4 recode5 recode6 recode7 recode8",
-    "recode1": "audiosprite -i 1 -g 0 --output assets/audio/explosion assets/audio/SFX/q009/explosion.ogg",
-    "recode2": "audiosprite -i 1 -g 0 --output assets/audio/grenade assets/audio/SFX/q009/grenade.ogg",
-    "recode3": "audiosprite -i 1 -g 0 --output assets/audio/pirate1uf assets/audio/Music/pirate1uf.ogg",
-    "recode4": "audiosprite -i 1 -g 0 --output assets/audio/Pirate1_Theme1 assets/audio/Music/Pirate1_Theme1.wav",
-    "recode5": "audiosprite -i 1 -g 0 --output assets/audio/thunderchild-intro assets/audio/Music/thunderchild-intro.wav",
-    "recode6": "audiosprite -i 1 -g 0 --output assets/audio/thunderchild-loop assets/audio/Music/thunderchild-loop.wav",
-    "recode7": "audiosprite -i 1 -g 0 --output assets/audio/weapswitch assets/audio/SFX/q009/weapswitch.ogg",
-    "recode8": "audiosprite -i 1 -g 0 --output assets/audio/quaddamage_out assets/audio/SFX/q009/quaddamage_out.ogg",
-    "recode9": "audiosprite -i 1 -g 0 --output assets/audio/quaddamage_shoot assets/audio/SFX/q009/quaddamage_shoot.ogg",
+    "sfx": "audiosprite --loop deathTune --loop mainMenuTheme --loop mainThemeLoop --output assets/audio/sounds assets/audio/*.wav",
     "dev": "run-s clean dev-cmd",
     "prod": "run-s clean prod-cmd",
     "deploy": "run-s clean deploy-cmd",
