--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev": "run-s clean dev-cmd",
     "prod": "run-s clean prod-cmd",
     "deploy": "run-s clean deploy-cmd",
-    "package": "run-s clean sfx nwjs-cmd package-cmd",
+    "package": "run-s clean sfx nwjs-cmd package-cmd installer-cmd",
     "packagetest": "run-s clean sfx nwjs-cmd packagetest-cmd",
     "clean": "del-cli -f dist/* packaged/*",
     "dev-cmd": "webpack --config webpack.dev.config.js",
@@ -18,6 +18,9 @@
     "deploy-cmd": "webpack --config webpack.deploy.config.js",
     "nwjs-cmd": "cross-env NWJS=true webpack --config webpack.deploy.config.js",
     "package-cmd": "babel-node packager.js build",
+    "installer-cmd": "run-script-os",
+    "installer-cmd:darwin": "./buildMacInstaller.sh",
+    "installer-cmd:win32": "zip packaged/EOTM-win64.zip packaged/edge-of-the-map/win64/**/*",
     "packagetest-cmd": "run-script-os",
     "packagetest-cmd:darwin": "nwbuild -p osx64 -r .",
     "packagetest-cmd:win32": "nwbuild -p win64 -r .",
