Installer Build Updates

--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "nwjs-cmd": "cross-env NWJS=true webpack --config webpack.deploy.config.js",
     "package-cmd": "babel-node packager.js build",
     "installer-cmd": "run-script-os",
-    "installer-cmd:darwin": "./buildMacInstaller.sh",
-    "installer-cmd:win32": "zip packaged/EOTM-win64.zip packaged/edge-of-the-map/win64/**/*",
+    "installer-cmd:darwin": "bash buildMacInstaller.sh",
+    "installer-cmd:win32": "bash buildWinInstaller.sh",
     "packagetest-cmd": "run-script-os",
     "packagetest-cmd:darwin": "nwbuild -p osx64 -r .",
     "packagetest-cmd:win32": "nwbuild -p win64 -r .",
